# adventofcode

./: .gitignore  README.md  pyproject.toml
data/2025/: 01.ex2
src/: aoc_tools.py  main.py
src/2024/: aoc_tools.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day16_2.py  day19.py  day20.py
src/2025/: aoc_tools.py  day01.py  day02.py  day03.py
src/aoc2024/: aoc_tools.py  day03.py  day05.py  day06.py  day09.py  day11.py  day12.py  day13.py  day16.py  day17.py  day20.py  dayxx.py
src/aoc2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  dayxx.py
