[project]
name = "adventofcode"
version = "0.2.0"
description = "Solutions for Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
]

[project.scripts]
today = "main:run_day"
start = "main:start_day"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "src"